--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>alphabet-clash-pro</title>
+
+    <!-- daisyui khala  -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    
+    <main class="min-h-screen bg-[#010313] bg-[url('/images/background.png')] bg-no-repeat  bg-center">
+        <section class="home hidden">
+            <div class="text-center ">
+                <h1 class="text-white text-8xl">Alphabet Clash Pro</h1>
+                <p>Unleash your keyboard kung Fu:press Enter to play </p>
+                <button class="btn">play now</button>
+            </div>
+        </section>
+        <!-- play section  -->
+        <section class="play-ground flex flex-col items-center gap-20 pt-20">
+            <div>
+                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3] bg-center">
+                    <div class="flex justify-center">
+                        <p class="bg-[#2F2941] text-white px-4 pb-4 rounded-b-2xl">Don't watch keybord while playing....</p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p class="text-9xl text-black">Y</p>
+                    </div>
+                </div>
+                
+            </div>
+            <div>
+                <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">q</kbd>
+                    <kbd class="kbd">w</kbd>
+                    <kbd class="kbd">e</kbd>
+                    <kbd class="kbd">r</kbd>
+                    <kbd class="kbd">t</kbd>
+                    <kbd class="kbd">y</kbd>
+                    <kbd class="kbd">u</kbd>
+                    <kbd class="kbd">i</kbd>
+                    <kbd class="kbd">o</kbd>
+                    <kbd class="kbd">p</kbd>
+                </div>
+                <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">a</kbd>
+                    <kbd class="kbd">s</kbd>
+                    <kbd class="kbd">d</kbd>
+                    <kbd class="kbd">f</kbd>
+                    <kbd class="kbd">g</kbd>
+                    <kbd class="kbd">h</kbd>
+                    <kbd class="kbd">j</kbd>
+                    <kbd class="kbd">k</kbd>
+                    <kbd class="kbd">l</kbd>
+                </div>
+                <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">z</kbd>
+                    <kbd class="kbd">x</kbd>
+                    <kbd class="kbd">c</kbd>
+                    <kbd class="kbd">v</kbd>
+                    <kbd class="kbd">b</kbd>
+                    <kbd class="kbd">n</kbd>
+                    <kbd class="kbd">m</kbd>
+                    <kbd class="kbd">/</kbd>
+                </div>
+            </div>
+            <div class="flex justify-between w-4/6">
+                <button class="btn rounded-full text-white bg-purple-400 ">
+                    Life
+                    <img src="images/hard.svg" alt="">
+                    <span>1</span>
+                  </button>
+                <button class="btn rounded-full text-white bg-purple-700">
+                    Score
+                    <img src="images/dolor.svg" alt="">
+                    <span>1</span>
+                  </button>
+            </div>
+        </section>
+        <section class="score">
+
+        </section>
+    </main>
 </body>
+
 </html>
