--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <button class="btn rounded-full text-white bg-purple-700">
                     Score
                     <img src="images/dolor.svg" alt="">
-                    <span>1</span>
+                    <span id="current-score">0</span>
                   </button>
             </div>
         </section>
