--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 </div>
             </div>
             <div class="flex justify-between w-4/6">
-                <button class="btn rounded-full text-white bg-purple-400 ">
+                <button class="btn rounded-full text-white bg-purple-700 ">
                     Life
                     <img src="images/hard.svg" alt="">
-                    <span>1</span>
+                    <span id="current-life">5</span>
                   </button>
                 <button class="btn rounded-full text-white bg-purple-700">
                     Score
@@ -82,13 +82,14 @@
             </div>
         </section>
         <!-- score section  -->
-        <section class="score flex justify-center items-center min-h-screen hidden">
+        <section id="final-score" class=" flex justify-center items-center min-h-screen hidden">
             <div class="text-white text-center space-y-6 bg-[#ffffff33] p-4 rounded-xl ">
+                <h1 class="text-3xl">Game Over !</h1>
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score : </span>
                     <span>14</span>
                 </h1>
-                <button class="btn">Play Now </button>
+                <button  onclick="play(),getARandomAlphabet(),setBackgroundColorById(),reset()" class="btn">Play again </button>
                 <p class="text-xl">Practice will make you Pro</p>
             </div>
         </section>
