--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <main class=" bg-[#010313] bg-[url('/images/background.png')] bg-no-repeat  bg-center">
+        <!-- Home section -->
         <section id="home-section" class=" flex justify-center items-center min-h-screen">
             <div class="text-center text-white space-y-5 ">
                 <h1 class=" text-6xl font-extrabold">Alphabet Clash Pro</h1>
@@ -20,52 +21,56 @@
                 <button onclick="play(),getARandomAlphabet(),setBackgroundColorById()" class="btn">play now</button>
             </div>
         </section>
+        <!-- Typing test section  -->
+
         <!-- play section  -->
         <section id="play-ground" class=" flex flex-col items-center gap-20 pt-20 hidden">
             <div>
-                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3] bg-center">
+                <div
+                    class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3] bg-center">
                     <div class="flex justify-center">
-                        <p class="bg-[#2F2941] text-white px-4 pb-4 rounded-b-2xl">Don't watch keybord while playing....</p>
+                        <p class="bg-[#2F2941] text-white px-4 pb-4 rounded-b-2xl">Don't watch keybord while playing....
+                        </p>
                     </div>
                     <div class="flex justify-center items-center h-full">
                         <p id="current-element" class="text-9xl text-black uppercase">Y</p>
                     </div>
                 </div>
-                
+
             </div>
             <div>
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd id="q" class="kbd">q</kbd>
-                    <kbd id="w" class="kbd">w</kbd>
-                    <kbd id="e" class="kbd">e</kbd>
-                    <kbd id="r" class="kbd">r</kbd>
-                    <kbd id="t" class="kbd">t</kbd>
-                    <kbd id="y" class="kbd">y</kbd>
-                    <kbd id="u" class="kbd">u</kbd>
-                    <kbd id="i" class="kbd">i</kbd>
-                    <kbd id="o" class="kbd">o</kbd>
-                    <kbd id="p" class="kbd">p</kbd>
+                    <kbd id="q" class="kbd w-20">q</kbd>
+                    <kbd id="w" class="kbd w-20">w</kbd>
+                    <kbd id="e" class="kbd w-20">e</kbd>
+                    <kbd id="r" class="kbd w-20">r</kbd>
+                    <kbd id="t" class="kbd w-20">t</kbd>
+                    <kbd id="y" class="kbd w-20">y</kbd>
+                    <kbd id="u" class="kbd w-20">u</kbd>
+                    <kbd id="i" class="kbd w-20">i</kbd>
+                    <kbd id="o" class="kbd w-20">o</kbd>
+                    <kbd id="p" class="kbd w-20">p</kbd>
                 </div>
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd id="a" class="kbd">a</kbd>
-                    <kbd id="s" class="kbd">s</kbd>
-                    <kbd id="d" class="kbd">d</kbd>
-                    <kbd id="f" class="kbd">f</kbd>
-                    <kbd id="g" class="kbd">g</kbd>
-                    <kbd id="h" class="kbd">h</kbd>
-                    <kbd id="j" class="kbd">j</kbd>
-                    <kbd id="k" class="kbd">k</kbd>
-                    <kbd id="l" class="kbd">l</kbd>
+                    <kbd id="a" class="kbd w-20">a</kbd>
+                    <kbd id="s" class="kbd w-20">s</kbd>
+                    <kbd id="d" class="kbd w-20">d</kbd>
+                    <kbd id="f" class="kbd w-20">f</kbd>
+                    <kbd id="g" class="kbd w-20">g</kbd>
+                    <kbd id="h" class="kbd w-20">h</kbd>
+                    <kbd id="j" class="kbd w-20">j</kbd>
+                    <kbd id="k" class="kbd w-20">k</kbd>
+                    <kbd id="l" class="kbd w-20">l</kbd>
                 </div>
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd id="z" class="kbd">z</kbd>
-                    <kbd id="x" class="kbd">x</kbd>
-                    <kbd id="c" class="kbd">c</kbd>
-                    <kbd id="v" class="kbd">v</kbd>
-                    <kbd id="b" class="kbd">b</kbd>
-                    <kbd id="n" class="kbd">n</kbd>
-                    <kbd id="m" class="kbd">m</kbd>
-                    <kbd id="/" class="kbd">/</kbd>
+                    <kbd id="z" class="kbd w-20">z</kbd>
+                    <kbd id="x" class="kbd w-20">x</kbd>
+                    <kbd id="c" class="kbd w-20">c</kbd>
+                    <kbd id="v" class="kbd w-20">v</kbd>
+                    <kbd id="b" class="kbd w-20">b</kbd>
+                    <kbd id="n" class="kbd w-20">n</kbd>
+                    <kbd id="m" class="kbd w-20">m</kbd>
+                    <kbd id="/" class="kbd w-20">/</kbd>
                 </div>
             </div>
             <div class="flex justify-between w-4/6">
@@ -73,12 +78,12 @@
                     Life
                     <img src="images/hard.svg" alt="">
                     <span id="current-life">5</span>
-                  </button>
+                </button>
                 <button class="btn rounded-full text-white bg-purple-700">
                     Score
                     <img src="images/dolor.svg" alt="">
                     <span id="current-score">0</span>
-                  </button>
+                </button>
             </div>
         </section>
         <!-- score section  -->
@@ -87,9 +92,10 @@
                 <h1 class="text-3xl">Game Over !</h1>
                 <h1 class="text-8xl">
                     <span class="font-extrabold">Score : </span>
-                    <span>14</span>
+                    <span id="last-score"></span>
                 </h1>
-                <button onclick="play(),getARandomAlphabet(),setBackgroundColorById(),reset()" class="btn">Play again </button>
+                <button onclick="play(),getARandomAlphabet(),setBackgroundColorById(),reset()" class="btn">Play again
+                </button>
                 <p class="text-xl">Practice will make you Pro</p>
             </div>
         </section>
