--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+        integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
-    <main class=" bg-[#010313] bg-[url('/images/background.png')] bg-no-repeat  bg-center">
+    <main class=" bg-[#24284c] bg-[url('/images/background.png')] bg-no-repeat  bg-center">
         <!-- Home section -->
         <section id="home-section" class="pt-20 items-center min-h-screen">
             <div class=" text-center text-white space-y-5 ">
@@ -37,32 +40,32 @@
             </div>
         </section>
         <!-- Typing test section  -->
-        <section id="typingTestSection" class="bg-fuchsia-50 border-2 min-h-screen hidden">
+        <section id="typingTestSection" class="bg-[#24284c] border-2 min-h-screen hidden">
             <div class="ml-5 mt-5">
                 <a href="index.html">
-                    <i class="fa-solid text-4xl text-blue-800 fa-circle-arrow-left"></i>
+                    <i class="fa-solid text-4xl text-white fa-circle-arrow-left"></i>
                 </a>
             </div>
             <div class="text-center space-y-5 mt-24 ">
-                <h1 class="text-5xl font-bold mb-8 ">Typing speed test</h1>
+                <h1 class="text-5xl text-white font-bold mb-8 ">Typing speed test</h1>
                 <div>
-                    <p class=" pt-4 mx-auto mb-8  border-8 border-blue-600 rounded-full w-24 h-24 text-5xl font-semibold"
+                    <p class=" pt-4 mx-auto mb-8 text-white border-8 border-yellow-400 rounded-full w-24 h-24 text-5xl font-semibold"
                         hidden id="showTime"></p>
                 </div>
-                <p class=" text-2xl text-orange-900" id="showSentence"></p>
+                <p class=" text-2xl text-white" id="showSentence"></p>
                 <div>
                     <textarea id="textarea" class="textarea textarea-info w-[800px] h-[100px] text-2xl"
                         disabled></textarea>
 
                 </div>
                 <button id="btn" class="btn px-16 text-xl bg-white">Start</button>
-                <p id="score" class="font-bold text-2xl text-amber-600 "></p>
+                <p id="score" class="font-bold text-2xl text-amber-400 "></p>
 
             </div>
         </section>
         <!-- play section  -->
         <section id="play-ground" class=" flex flex-col items-center gap-20 pt-4 hidden">
-         
+
             <div class="flex">
                 <div class="absolute -ml-56 mt-3">
                     <a href="index.html">
@@ -70,7 +73,7 @@
                     </a>
                 </div>
                 <div
-                    class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3] bg-center">
+                    class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-purple-800 bg-[#FFFFFFB3] bg-center">
                     <div class="flex justify-center">
                         <p class="bg-[#2F2941] text-white px-4 pb-4 rounded-b-2xl">Don't watch keybord while playing....
                         </p>
@@ -129,19 +132,25 @@
                 </button>
             </div>
 
-        
+
         </section>
         <!-- score section  -->
         <section id="final-score" class=" flex justify-center items-center min-h-screen hidden">
-            <div class="text-white text-center space-y-6 bg-[#ffffff33] p-4 rounded-xl ">
-                <h1 class="text-3xl">Game Over !</h1>
+            <div class=" text-center space-y-6 bg-white p-4 rounded-xl ">
+                <h1 class="text-3xl font-semibold">Game Over !</h1>
                 <h1 class="text-8xl">
-                    <span class="font-extrabold">Score : </span>
+                    <span class="font-bold">Score : </span>
                     <span id="last-score"></span>
                 </h1>
-                <button onclick="play(),getARandomAlphabet(),setBackgroundColorById(),reset()" class="btn">Play again
-                </button>
-                <p class="text-xl">Practice will make you Pro</p>
+                <div class="grid grid-cols-2 py-8 justify-around">
+                    <button onclick="play(),getARandomAlphabet(),setBackgroundColorById(),reset()"
+                        class="btn btn-outline btn-success text-xl">Play again
+                    </button>
+                    <a href="index.html">
+                        <button class="btn btn-outline btn-success text-xl">Back To Home</button>
+                    </a>
+                </div>
+                <p class="text-xl font-bold">Practice will make you Pro</p>
             </div>
         </section>
     </main>
